package es.us.meerkat.backend.entity;

public enum EstadoAsistencia {
    CONFIRMADA,
    CANCELADA
}
